[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/TileMap.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Exit.tscn" type="PackedScene" id=3]
[ext_resource path="res://Levels/Level 5.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Clock.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32.0287, 8.18402 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 153.404, 10.2471 )

[node name="Level 5" type="Node2D"]
script = ExtResource( 4 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 24.4908, 25.2176 )

[node name="Exit" parent="." instance=ExtResource( 3 )]
position = Vector2( 345.491, 116.937 )

[node name="Clock" parent="." instance=ExtResource( 5 )]
position = Vector2( 55.809, 136.082 )

[node name="Death Box" type="Area2D" parent="."]
position = Vector2( 79.9187, 214.771 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Death Box"]
position = Vector2( -0.199959, 0.556595 )
shape = SubResource( 1 )

[node name="Death Box 2" type="Area2D" parent="."]
position = Vector2( 199.369, 361.272 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Death Box 2"]
position = Vector2( -0.962677, 0.0145416 )
shape = SubResource( 2 )

[node name="TileMap" parent="." instance=ExtResource( 2 )]
tile_data = PoolIntArray( -65535, 46, 0, -65534, 46, 0, -65533, 46, 0, -65532, 46, 0, -65531, 46, 0, -65530, 46, 0, -65529, 46, 0, -65528, 46, 0, -65527, 46, 0, 0, -1073741778, 0, 10, 42, 0, 65536, -1073741778, 0, 65546, 45, 0, 131073, 41, 0, 131074, 37, 0, 131083, 45, 0, 196610, -1610612697, 0, 196620, 46, 0, 196621, 46, 0, 196622, 46, 0, 196623, 46, 0, 196624, 46, 0, 196625, 46, 0, 196626, 46, 0, 196627, 46, 0, 196628, 46, 0, 196629, 46, 0, 196630, 46, 0, 196631, 46, 0, 196632, 46, 0, 196633, 46, 0, 262146, -1610612696, 0, 262170, 45, 0, 327682, -1610612696, 0, 327707, 45, 0, 393218, -1610612696, 0, 393244, 45, 0, 458754, -1610612696, 0, 458781, 45, 0, 524290, -1610612696, 0, 524308, 39, 0, 524309, 40, 0, 524310, 40, 0, 524311, 41, 0, 524318, 42, 0, 589826, -1610612696, 0, 589827, 37, 0, 589844, 42, 0, 589845, 43, 0, 589846, 43, 0, 589847, 44, 0, 589854, 42, 0, 655362, -1610612696, 0, 655380, 45, 0, 655381, 46, 0, 655382, 43, 0, 655383, 44, 0, 655385, 37, 0, 655390, 42, 0, 720898, -1610612696, 0, 720902, 37, 0, 720918, 42, 0, 720919, 44, 0, 720921, 37, 0, 720926, 42, 0, 786434, -1610612696, 0, 786439, 37, 0, 786440, 37, 0, 786441, 37, 0, 786442, 37, 0, 786443, 37, 0, 786454, 42, 0, 786455, 43, 0, 786456, 40, 0, 786457, 44, 0, 786459, 37, 0, 786462, 42, 0, 851970, -1610612696, 0, 851971, 53, 0, 851972, 53, 0, 851973, 53, 0, 851974, 53, 0, 851975, -1073741783, 0, 851990, 45, 0, 851991, 46, 0, 851992, 43, 0, 851993, 44, 0, 851995, 37, 0, 851998, 42, 0, 917506, -1610612696, 0, 917507, 37, 0, 917508, 37, 0, 917509, 37, 0, 917510, 37, 0, 917511, 37, 0, 917528, 45, 0, 917529, 46, 0, 917530, 46, 0, 917531, 46, 0, 917532, 37, 0, 917534, 42, 0, 983042, -1610612696, 0, 983055, 39, 0, 983056, 40, 0, 983057, 41, 0, 983070, 42, 0, 1048578, -1610612696, 0, 1048580, 37, 0, 1048591, 42, 0, 1048592, 43, 0, 1048593, 44, 0, 1048606, 42, 0, 1114114, -1610612696, 0, 1114127, 45, 0, 1114128, 46, 0, 1114129, 47, 0, 1114138, 39, 0, 1114139, 40, 0, 1114140, 40, 0, 1114141, 40, 0, 1179650, -1610612696, 0, 1179658, 37, 0, 1179673, 39, 0, 1245186, -1610612696, 0, 1245208, 39, 0, 1310722, -1610612696, 0, 1310743, 39, 0, 1376258, -1610612696, 0, 1376278, 39, 0, 1441794, -1610612696, 0, 1441795, 53, 0, 1441796, 53, 0, 1441797, 53, 0, 1441798, 53, 0, 1441799, 53, 0, 1441800, 53, 0, 1441801, 53, 0, 1441802, 53, 0, 1441803, 53, 0, 1441804, 53, 0, 1441805, 53, 0, 1441806, 53, 0, 1441807, 53, 0, 1441808, 53, 0, 1441809, 53, 0, 1441810, 53, 0, 1441811, 53, 0, 1441812, 53, 0, 1441813, 53, 0, 1441814, 42, 0, 1507331, 40, 0, 1507332, 40, 0, 1507333, 40, 0, 1507334, 40, 0, 1507335, 40, 0, 1507336, 40, 0, 1507337, 40, 0, 1507338, 40, 0, 1507339, 40, 0, 1507340, 40, 0, 1507341, 40, 0, 1507342, 40, 0, 1507343, 40, 0, 1507344, 40, 0, 1507345, 40, 0, 1507346, 40, 0, 1507347, 40, 0, 1507348, 40, 0, 1507349, 40, 0 )

[connection signal="body_entered" from="Exit" to="." method="_on_Exit_body_entered"]
[connection signal="body_entered" from="Death Box" to="." method="_on_Death_Box_body_entered"]
[connection signal="body_entered" from="Death Box 2" to="." method="_on_Death_Box_2_body_entered"]
